WORKS-5: Disable next button while loading warehouse list

--- a/Code/ShipWorks.Installer/Views/LocationConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/LocationConfig.xaml
@@ -10,6 +10,7 @@
     d:DesignWidth="300"
     DataContext="{Binding Path=LocationConfigViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
+
     <Grid>
         <StackPanel>
             <TextBlock Style="{StaticResource Header}" Text="Select your desired warehouse for this installation:" />
@@ -25,13 +26,14 @@
                 <TextBlock Text="Advanced Options"/>
             </Border>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                <CheckBox Style="{StaticResource FormCheckBox}" IsChecked="{Binding OwnDbChecked}"/>
-                <TextBlock Text="Don't install SQL / connect to my own database" Margin="10,0,0,0"/>
+                <CheckBox VerticalContentAlignment="Center" Style="{StaticResource FormCheckBox}" IsChecked="{Binding OwnDbChecked}">
+                    <Label VerticalAlignment="Center" Content="Don't install SQL / connect to my own database" Margin="0,1,0,0" />
+                </CheckBox>
             </StackPanel>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="1">
             <Button Style="{StaticResource SmallSecondaryButton}" Command="{Binding BackCommand}">Back</Button>
-            <Button Style="{StaticResource SmallPrimaryButton}" Margin="10,0,20,0" Command="{Binding NextCommand}" IsDefault="True">Next</Button>
+            <Button Style="{StaticResource SmallPrimaryButton}" Margin="10,0,20,0" Command="{Binding NextCommand}" IsEnabled="{Binding FinishedLoading}" IsDefault="True">Next</Button>
             <Button Style="{StaticResource SmallSecondaryButton}" IsCancel="True">Cancel</Button>
         </StackPanel>
     </Grid>
