WORKS-106: Create the cancel modal and add interaction logic

--- a/Code/ShipWorks.Installer/Views/DatabaseConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/DatabaseConfig.xaml
@@ -97,7 +97,7 @@
                     IsDefault="True">
                 Next
             </Button>
-            <Button Style="{StaticResource SmallSecondaryButton}">Cancel</Button>
+            <Button Style="{StaticResource SmallSecondaryButton}" IsCancel="True" Command="{Binding CancelCommand}">Cancel</Button>
         </StackPanel>
     </Grid>
 </Page>
