--- a/Code/ShipWorks.Installer/Views/InstallPath.xaml
+++ b/Code/ShipWorks.Installer/Views/InstallPath.xaml
@@ -34,7 +34,7 @@
         <StackPanel Margin="10" Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Right">
             <Button Style="{StaticResource SmallSecondaryButton}" Command="{Binding BackCommand}">Back</Button>
             <Button Style="{StaticResource SmallPrimaryButton}" Margin="10,0,20,0" Command="{Binding NextCommand}" IsEnabled="{Binding Error, Converter={StaticResource IsEmptyConverter}}">Next</Button>
-            <Button Style="{StaticResource SmallSecondaryButton}" IsCancel="True">Cancel</Button>
+            <Button Style="{StaticResource SmallSecondaryButton}" IsCancel="True" Command="{Binding CancelCommand}">Cancel</Button>
         </StackPanel>
     </Grid>
 </Page>
