--- a/Code/ShipWorks.Installer/Views/Login.xaml
+++ b/Code/ShipWorks.Installer/Views/Login.xaml
@@ -65,7 +65,7 @@
 
         <StackPanel Margin="10" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Orientation="Horizontal">
             <Button Style="{StaticResource SmallSecondaryButton}" Command="{Binding BackCommand}" Margin="0,0,10,0">Back</Button>
-            <Button Style="{StaticResource SmallSecondaryButton}">Cancel</Button>
+            <Button Style="{StaticResource SmallSecondaryButton}" IsCancel="True" Command="{Binding CancelCommand}">Cancel</Button>
         </StackPanel>
     </Grid>
 </Page>
