--- a/Code/ShipWorks.Installer/Views/LocationConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/LocationConfig.xaml
@@ -25,11 +25,9 @@
             <Border BorderBrush="Black" BorderThickness="0,0,0,1" Margin="0,20,0,0">
                 <TextBlock Text="Advanced Options"/>
             </Border>
-            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                <CheckBox VerticalContentAlignment="Center" Style="{StaticResource FormCheckBox}" IsChecked="{Binding OwnDbChecked}">
-                    <Label VerticalAlignment="Center" Content="Don't install SQL / connect to my own database" Margin="0,1,0,0" />
-                </CheckBox>
-            </StackPanel>
+            <CheckBox VerticalContentAlignment="Center" Style="{StaticResource FormCheckBox}" IsChecked="{Binding OwnDbChecked}" Margin="10,10,0,0">
+                <Label VerticalAlignment="Center" Content="Don't install SQL / connect to my own database" Margin="0,1,0,0" />
+            </CheckBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="1">
             <Button Style="{StaticResource SmallSecondaryButton}" Command="{Binding BackCommand}">Back</Button>
