WORKS-5: Wire up close button for warnings page

--- a/Code/ShipWorks.Installer/Views/Warning.xaml
+++ b/Code/ShipWorks.Installer/Views/Warning.xaml
@@ -25,7 +25,8 @@
         <Button Style="{StaticResource SmallSecondaryButton}" 
                 Margin="10"
                 VerticalAlignment="Bottom" 
-                HorizontalAlignment="Right">
+                HorizontalAlignment="Right"
+                Command="{Binding CancelCommand}">
             Close
         </Button>
     </Grid>
