--- a/Code/ShipWorks.UI/Dialogs/DefaultPrinters/DefaultPrinters.xaml
+++ b/Code/ShipWorks.UI/Dialogs/DefaultPrinters/DefaultPrinters.xaml
@@ -1,5 +1,5 @@
 ﻿<ui:InteropWindow xmlns:ui="clr-namespace:Interapptive.Shared.UI;assembly=Interapptive.Shared"
-    x:Class="ShipWorks.UI.Dialogs.QuickStart.DefaultPrinters"
+    x:Class="ShipWorks.UI.Dialogs.DefaultPrinters.DefaultPrinters"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
