--- a/Code/ShipWorks.Installer/Views/LocationConfig.xaml
+++ b/Code/ShipWorks.Installer/Views/LocationConfig.xaml
@@ -18,7 +18,7 @@
             <ComboBox Style="{StaticResource FormComboBox}" Margin="0,10,0,0" Width="200" HorizontalAlignment="Left" ItemsSource="{Binding Path=WarehouseList}" DisplayMemberPath="Details.Name" SelectedItem="{Binding SelectedWarehouse, Mode=TwoWay}"/>
             <TextBlock Margin="0,20,0,0">
                 Need to enable remote connections? 
-                <Hyperlink NavigateUri="hub.shipworks.com">
+                <Hyperlink Command="{Binding OpenWebsiteCommand}">
                     Click here.
                 </Hyperlink>
             </TextBlock>
